fix overflow footer

--- a/source/stylesheets/partials/_about.scss
+++ b/source/stylesheets/partials/_about.scss
@@ -1,6 +1,6 @@
 article.about {
   @include outer-container;
-  padding: 1em;
+  padding: em(24);
   margin-top: em(54);
   @include media($large-screen) {
     padding: 0;
