--- a/source/stylesheets/partials/_members.scss
+++ b/source/stylesheets/partials/_members.scss
@@ -5,10 +5,10 @@ p.intro {
 }
 
 .wrapper {
-  padding: 1em;
+  padding: em(24);
   margin-bottom: em(24);
   padding-bottom: em(24);
-  @include media($medium-screen){
+  @include media($large-screen){
     margin-bottom: 0;
     padding: 0;
   }
